# Mikubot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CODEOWNERS  Dockerfile  HTTPrequest.py  IDchaine.db  README.md  SQLite.py  Taskfile.yml  _typos.toml  button.py  main.py  mise.toml  pyproject-rye.toml  pyproject.toml  renovate.json  renovate.json5  requirements.txt  startup.sh  timetree.py  transfer.py
.github/: Gemfile
.github/workflows/: auto-deploy.yml  check.yml  conoha.yml  deploy.yml  docker-ci.yml  main.yml  manual-deploy.yml  pana.yml  pr-release.yml  pre-commit.yml  typos.yml
.github/workflows/composite/setup/: action.yml
app/: bot.py
app/core/afk/: _cog.py
app/core/chat/: cog.py  embed.py  view.py
app/core/pin/: cog.py
app/core/role/: cog.py  view.py
app/core/vote/: cog.py  embed.py  type.py
app/experimental/: _cog.py  cog.py  view.py
app/experimental/afk/: _cog.py
app/experimental/buhi/: _cog.py
app/help/: cog.py  const.py  embed.py  view.py
app/test/: cog.py
app/timetree/: _cog.py
app/vote/: cog.py  type.py  view.py  vote.py
components/: __init__.py  confirm_ui.py  delete_button.py
components/ui/: __init__.py  controller.py  send.py  type.py  view.py
components/ui/common/: modal.py  select.py
components/ui/controller/: __init__.py  controller.py  interaction_controller.py  messageable_controller.py  type.py
components/ui/internal/: __init__.py  view.py
const/: discord.py  emoji.py
dev/: HTTPrequest.py  button.py  transfer.py
ductile/: __init__.py  state.py  view.py
ductile/controller/: __init__.py  controller.py  interaction_controller.py  messageable_controller.py  type.py
ductile/internal/: view.py
ductile/types/: __init__.py  callback.py  view.py
ductile/ui/: __init__.py  button.py  modal.py  select.py
ductile/utils/: __init__.py  call.py  logger.py
legacy/: Dockerfile  SQLite.py  main.py  timetree.py
legacy/app/timetree/: cog.py  embed.py
legacy/dev/: HTTPrequest.py  button.py  transfer.py
legacy/timetree/: __init__.py  client.py  test_client.py
src/app/: bot.py  embed.py  tree.py
src/app/admin/: cog.py  view.py
src/app/core/chat/: cog.py  embed.py
src/app/core/extract/: cog.py  embed.py  processor.py  view.py
src/app/core/opinion/: cog.py  view.py
src/app/core/pin/: cog.py
src/app/core/role/: cog.py  view.py
src/app/core/thread/: cog.py  view.py
src/app/core/voice/: cog.py  view.py
src/app/core/vote/: _cog.py  cog.py  embed.py
src/app/experimental/: _cog.py  view.py
src/app/experimental/afk/: _cog.py
src/app/experimental/buhi/: _cog.py
src/app/help/: cog.py  const.py  embed.py
src/app/reminder/: cog.py
src/app/user/: cog.py  embed.py  view.py
src/app/utils/: callback.py  embed.py  view.py
src/app/vote/: cog.py  enum.py  manager.py  view.py
src/app/wol/: cog.py  fn.py  view.py
src/components/: __init__.py  confirm_ui.py  delete_button.py  status.py
src/config/: intent.py
src/const/: discord.py  emoji.py  enums.py  literal.py
src/utils/: __init__.py  chunk.py  cog.py  extract.py  finder.py  io.py  mention.py  path.py  time.py  timestamp.py  twitter.py
utils/: dispand.py  extract.py  finder.py
