[project]
name = "mikubot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "sushi-chaaaan", email = "mail@sushichan.live" }]
dependencies = [
    "discord-py[voice,speed] @ git+https://github.com/Rapptz/discord.py.git@d853a3f0a7e19d290021434e85f9c4c14089a874",
    "pydantic>=2.7.0",
    "aiohttp>=3.9.5",
    "ductile-ui>=0.2.6",
    "typing-extensions>=4.11.0",
    "asyncer>=0.0.5",
    "result>=0.16.1",
    "notion-client>=2.2.1",
    "glom>=23.5.0",
    "sentry-sdk>=1.45.0",
]
readme = "README.md"
requires-python = ">= 3.11"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mypy>=1.9.0",
    "python-dotenv>=1.0.1",
    "pre-commit>=3.7.0",
    "ruff>=0.4.1",
]

[tool.rye.scripts]
dev = { cmd = ["python", "main.py"], env-file = ".env" }
install = { cmd = ["pre-commit", "install"] }

[tool.ruff]
# https://qiita.com/yuji38kwmt/items/63e82126076204923520
target-version = "py311"
line-length = 125

[tool.ruff.lint]
ignore = [
    "E203",
    "D",
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "ANN101",  # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102",  # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
    "COM812",  # recommended by ruff formatter
    "ISC001",  # recommended by ruff formatter
    "UP040",   # discord.py can not understand new type syntax
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"./src/app/**" = [
    "INP001", # add __init__.py to app directory is too much work
]
"/**/tests/**" = [
    "INP001", # add __init__.py to tests directory is too much work
    "S101",   # allow to use assert in tests
]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.mypy]
python_version = "3.11"
exclude = [".venv"]
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
implicit_reexport = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
