[project]
name = "mikubot"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "sushi-chaaaan", email = "mail@sushichan.live" }]
dependencies = [
    "discord-py[voice,speed]>=2.5.2",
    "pydantic>=2.9.2",
    "aiohttp>=3.11.2",
    "ductile-ui==0.3.0",
    "typing-extensions>=4.12.2",
    "asyncer>=0.0.8",
    "result>=0.17.0",
    "notion-client>=2.2.1",
    "glom>=24.11.0",
    "sentry-sdk>=2.18.0",
]
readme = "README.md"
requires-python = ">= 3.11"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = ["mypy>=1.15.0", "python-dotenv>=1.1.0", "ruff>=0.11.7"]
package = false

[tool.ruff]
# https://qiita.com/yuji38kwmt/items/63e82126076204923520
target-version = "py311"
line-length = 125

[tool.ruff.lint]
ignore = [
    "E203",
    "D",
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "ERA",     # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する
    "COM812",  # recommended by ruff formatter
    "ISC001",  # recommended by ruff formatter
    "UP040",   # discord.py can not understand new type syntax
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"./src/app/**" = [
    "INP001", # add __init__.py to app directory is too much work
]
"/**/tests/**" = [
    "INP001", # add __init__.py to tests directory is too much work
    "S101",   # allow to use assert in tests
]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.mypy]
python_version = "3.11"
exclude = [".venv"]
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
implicit_reexport = true
ignore_missing_imports = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
